Snapshot filename defined in form Snapshot-YYYYMMDD-hhmmss